<resources>
    <string name="app_name">test</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="GismeteoApiKey">8364d75b7c2dcf33ee2225f9d89a7286</string>
    <string name="ShowWeatherButton">Show weather</string>
    <string name="settings">Settings</string>
    <string name="changeLightTheme">Change light theme</string>
    <string name="changeDarkTheme">Change dark theme</string>
    <string name="scrollViewExample">Да, такова была моя участь с самого детства. Все читали на моем лице признаки дурных чувств, которых не было; но их предполагали – и они родились. Я был скромен – меня обвиняли в лукавстве: я стал скрытен. Я глубоко чувствовал добро и зло; никто меня не ласкал, все оскорбляли: я стал злопамятен; я был угрюм, – другие дети веселы и болтливы; я чувствовал себя выше их, – меня ставили ниже. Я сделался завистлив. Я был готов любить весь мир, – меня никто не понял: и я выучился ненавидеть. Моя бесцветная молодость протекала в борьбе с собой и светом; лучшие мои чувства, боясь насмешки, я хоронил в глубине сердца: они там и умерли. Я говорил правду – мне не верили: я начал обманывать; узнав хорошо свет и пружины общества, я стал искусен в науке жизни и видел, как другие без искусства счастливы, пользуясь даром теми выгодами, которых я так неутомимо добивался. И тогда в груди моей родилось отчаяние – не то отчаяние, которое лечат дулом пистолета, но холодное, бессильное отчаяние, прикрытое любезностью и добродушной улыбкой. Я сделался нравственным калекой: одна половина души моей не существовала, она высохла, испарилась, умерла, я ее отрезал и бросил, – тогда как другая шевелилась и жила к услугам каждого, и этого никто не заметил, потому что никто не знал о существовании погибшей ее половины; но вы теперь во мне разбудили воспоминание о ней, и я вам прочел ее эпитафию. Многим все вообще эпитафии кажутся смешными, но мне нет, особенно когда вспомню о том, что под ними покоится</string>
    <string name="hello_username">Hello username</string>
</resources>